--- a/css/output.css
+++ b/css/output.css
@@ -908,6 +908,12 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-white\/70 {
+    background-color: color-mix(in srgb, #fff 70%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-white) 70%, transparent);
+    }
+  }
   .bg-zinc-700 {
     background-color: var(--color-zinc-700);
   }
@@ -926,6 +932,9 @@
   .bg-radial-\[at_50\%_10\%\] {
     --tw-gradient-position: at 50% 10%;
     background-image: radial-gradient(var(--tw-gradient-stops,at 50% 10%));
+  }
+  .bg-\[url\(\'\.\.\/animated-image-bg\/121\.jpg\'\)\] {
+    background-image: url('../animated-image-bg/121.jpg');
   }
   .from-gray-50 {
     --tw-gradient-from: var(--color-gray-50);
@@ -1224,6 +1233,11 @@
   .blur-\[7px\] {
     --tw-blur: blur(7px);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .backdrop-blur-\[7rem\] {
+    --tw-backdrop-blur: blur(7rem);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .backdrop-blur-lg {
     --tw-backdrop-blur: blur(var(--blur-lg));
@@ -1863,6 +1877,10 @@
     align-items: center;
     justify-content: center;
   }
+  .anim-flow {
+    animation: leftRightPath 25s ease infinite;
+    background-size: 400% 400%;
+  }
 }
 @layer base {
   .gradient_body {
@@ -1876,7 +1894,7 @@
     --tw-gradient-to: var(--color-blue-900);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
     background-size: 400% 400%;
-    animation: leftRightPath 25s ease infinite;
+    animation: topBottomPath 25s ease infinite;
   }
   .centerhv h1, .centerhv h2, .centerhv h3 {
     --tw-font-weight: var(--font-weight-semibold);
@@ -1914,6 +1932,14 @@
   }
   50% {
     background-position: 100% 50%;
+  }
+}
+@keyframes topBottomPath {
+  0%, 100% {
+    background-position: 50% 0%;
+  }
+  50% {
+    background-position: 50% 100%;
   }
 }
 @property --tw-translate-x {
